Fixed viewport height on mobile issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@
 .overlay,
 .blurOverlay {
   object-fit: cover;
-  height: calc(var(--vh, 1vh) * 100);
+  height: 100%;
   position: absolute;
   width: 100%; }
 
